ui: Fixed font colors in indexing dialogs and line breaks in status bar

--- a/bin/app/data/gui/indexing_dialog/indexing_dialog.css
+++ b/bin/app/data/gui/indexing_dialog/indexing_dialog.css
@@ -1,4 +1,4 @@
-* {
+QLabel {
 	color: white;
 }
 
@@ -29,9 +29,10 @@
 }
 
 #errorCount {
-	font-size: 12pt;
 	border: none;
 	background: transparent;
+	color: white;
+	font-size: 14pt;
 }
 
 #windowButton {
